--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.22",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -23,12 +25,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-location": "^4.0.1",
     "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^13.4.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "@react-native-masked-view/masked-view": "0.3.0"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
