--- a/package.json
+++ b/package.json
@@ -14,22 +14,26 @@
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.22",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.14",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "^50.0.17",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.1",
+    "lucide": "^0.376.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "^1.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^13.4.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "@react-native-masked-view/masked-view": "0.3.0"
+    "react-native-user-avatar": "^1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
