--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^13.4.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
