--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^13.4.0",
     "react-native-uuid": "^2.0.2",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "expo-blur": "~12.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
