--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gluestack-style/react": "^1.0.54",
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.22",
+    "@react-email/button": "^0.0.14",
+    "@react-email/html": "^0.0.7",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-native-google-signin/google-signin": "^11.0.1",
@@ -24,9 +26,12 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
     "expo-auth-session": "^5.4.0",
+    "expo-blur": "~12.9.2",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "^12.8.2",
     "firebase": "^10.11.1",
+    "node": "^22.0.0",
+    "qs": "^6.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
@@ -41,8 +46,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^13.4.0",
     "react-native-uuid": "^2.0.2",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-blur": "~12.9.2"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
